shelley/chain-and-ledger/executable-spec/test/ghcid.txt
Test/Cardano/Crypto/VRF/Fake.hs:45:33-41: error:
    Not in scope: type constructor or class ‘OutputVRF’
   |
45 |   sneakilyExtractResult :: a -> OutputVRF FakeVRF
   |                                 ^^^^^^^^^
Test/Cardano/Crypto/VRF/Fake.hs:101:3-15: error:
    ‘sizeOutputVRF’ is not a (visible) method of class ‘VRFAlgorithm’
    |
101 |   sizeOutputVRF _ = sizeHash (Proxy :: Proxy MD5)
    |   ^^^^^^^^^^^^^
Test/Cardano/Crypto/VRF/Fake.hs:134:4-12: error:
    Not in scope: type constructor or class ‘OutputVRF’
    |
134 |   (OutputVRF FakeVRF, CertVRF FakeVRF)
    |    ^^^^^^^^^
